# nfldata

./: .gitignore  pyproject.toml  requirements.txt
nfl/: __init__.py  constants.py
nfl/assets/: dbt.py
nfl/assets/bi/: export.py
nfl/assets/ingestion/nflverse/: nfl.py  ops.py
nfl/bi/pages/: first_down.md  flex_stats.md  index.md  passer_stats.md  penalties.md  receiver_stats.md
nfl/bi/sources/nflstats/: connection.yaml  distinct_teams.sql  first_down.sql  firstdownpassing.sql  flex_stats.sql  passer_stats.sql  penalties_per_team.sql  penalty_totals.sql  receiver_stats_per_team.sql  rushing.sql  team_breakdown.sql
nfl/logs/.telemetry/: id.yaml
nfl/logs/history/: runs.db
nfl/logs/history/runs/: 2734a878-f75e-4907-9df0-1efd94404071.db  474a3f6b-3f90-45c6-8618-883636f0904e.db  58ca9174-4837-4695-b938-88318917c064.db  7064c91f-ea73-4603-aa7a-78a7cd0ae786.db  8c2d9762-4989-4da3-956b-691ffa634425.db  index.db
nfl/logs/schedules/: schedules.db
nfl/logs/storage/2734a878-f75e-4907-9df0-1efd94404071/compute_logs/: xwbaoksa.err  xzvvkeuy.err  xzvvkeuy.out
nfl/resources/: dbt_project.py  resources.py
nfl/resources/io/: DuckDBBIExport.py  DuckDBPolarsIO.py
nfl/transformations/dbt/: .user.yml  dbt_project.yml  profiles.yml
nfl/transformations/dbt/models/: distinct_teams.sql  first_down.sql  firstdownpassing.sql  flex_stats.sql  penalties_per_team.sql  penalties_per_team_schema.yml  penalty_totals.sql  penalty_totals_schema.yml  receiver_stats_per_team.sql  rushing.sql  sources.yml  team_breakdown.sql
(+19 files in other folders)
