[project]
name = "quiv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.4.1",
    "boto3>=1.35.24",
    "dagster-dbt==0.24.2",
    "dagster-duckdb>=0.24.2",
    "dagster-duckdb-polars==0.24.2",
    "dagster==1.8.2",
    "datasets>=3.0.0",
    "dbt-core>=1.8.7",
    "dbt-duckdb>=1.8.3",
    "dlt>=1.0.0",
    "duckdb==1.0.0",
    "huggingface-hub>=0.25.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pandas>=2.2.3",
    "polars>=1.8.0",
    "pyarrow>=17.0.0",
    "python-dotenv>=1.0.1",
    "python-slugify>=8.0.4",
    "requests>=2.32.3",
    "s3fs>=0.4.2",
    "tenacity>=9.0.0",
    "dagster-webserver==1.8.2",
    "ruff>=0.6.7",
    "httpx<0.25.0",
    "harlequin>=1.24.1",
]


[tool.dagster]
module_name = "nfl"
